--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>First repository</title>
+  </head>
+  <body>
+    <section>
+      <h1>Oleksandr</h1>
+    </section>
+  </body>
+</html>
