--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First repository</title>
-  </head>
-  <body>
-    <section>
-      <h1>Oleksandr</h1>
-    </section>
-  </body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Bike Store</title>
+      <link rel="stylesheet" href="./styles.css" />
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+   </head>
+   <body>
+      <!--header-->
+      <header class="header">
+         <!--navigation-->
+         <section class="navigation-container">
+            <h1 class="navigation-title">Велопланета<br /><span class="navigation-title-2">Магазин велотоварів</span></h1>
+            <ul class="navigation-item">
+               <li class="navigation-name">
+                  <span class="navigation-span">Велосипеди</span>
+               </li>
+               <li class="navigation-name">
+                  <span class="navigation-span">Компоненти</span>
+               </li>
+               <li class="navigation-name">
+                  <span class="navigation-span">Одяг</span>
+               </li>
+               <li class="navigation-name">
+                  <span class="navigation-span">Аксесуари</span>
+               </li>
+               <li class="navigation-name">
+                  <span class="navigation-span">Інше</span>
+               </li>
+            </ul>
+         </section>
+      </header>
+   </body>
 </html>
