сделал секцию с фото
секция с фото

--- a/index.html
+++ b/index.html
@@ -32,5 +32,25 @@
             </ul>
          </section>
       </header>
+      <!--головна секція-->
+      <main class="main-section">
+         <section class="main-info">
+            <h1 class="main-title">Велосипеди на різний смак та гаманець</h1>
+            <p class="main-paragraph">Наша компанія є одним з найбільших центрів на території України по дистрибюції всесвітньо-відомих брендів в області велоспорту</p>
+            <button class="main-button">Замовити</button>
+         </section>
+
+         <!--секція з інформацією до фото-->
+         <section>
+            <h2>Grail6</h2>
+            <p>Гравійний дизайн, що забезпечує стабільність та рухливість у міру змени ландшафту</p>
+         </section>
+
+         <!--секція з фото-->
+         <section class="photo-section">
+            <img class="first-photo" src="./photos/IMAGE 2020-10-18 19:24:07.jpg" alt="cycle" />
+            <img class="second-photo" src="./photos/IMAGE 2020-10-18 19:24:11.jpg" alt="cycle" />
+         </section>
+      </main>
    </body>
 </html>
